# cargo-verset

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml  typos.toml
.github/workflows/: ci.yml  deploy.yml
scripts/: release_version.ps1  release_version.sh
src/: cli.rs  main.rs  test.rs
src/cli/: depoptions.rs  mod.rs  pkgoptions.rs  releaseoptions.rs  test_depoptions.rs  test_pkgoptions.rs  test_releaseoptions.rs
src/test/: mod.rs  test_depoptions.rs  test_pkgoptions.rs
src/test/snapshots/: cargo_verset__test__cargo_verset-dependency.snap  cargo_verset__test__cargo_verset-package.snap  cargo_verset__test__cargo_verset.snap
test_snapshots/: cargo_verset__test__cargo_wash.snap
tests/snapshots/: cargo_verset__test__cargo_verset-dependency.snap  cargo_verset__test__cargo_verset-package.snap  cargo_verset__test__cargo_verset-release.snap  cargo_verset__test__cargo_verset.snap
